--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.4.1",
     "@react-google-maps/api": "^2.20.3",
     "@reduxjs/toolkit": "^2.4.0",
+    "emailjs-com": "^3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
